# ffmpeg-opencv-demo

./: CMakeLists.txt  ffmpeg_demo.cpp
